--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-js-search": "^0.3.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "^4.0.0"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -40,5 +40,5 @@
   "devDependencies": {
     "gh-pages": "^3.1.0"
   },
-  "homepage": "http://abderrahmane-mustapha.codes"
+  "homepage": "https://abderrahmanemustapha.github.io/abderrahmaneMustapha/"
 }
