--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
   "devDependencies": {
     "gh-pages": "^3.1.0"
   },
-  "homepage": "https://abderrahmanemustapha.github.io/abderrahmaneMustapha/"
+  "homepage": "http://abderrahmane-mustapha.codes/"
 }
