--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.14.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-js-search": "^0.3.0",
